fix scrollbar in windows
Fix the issue in windows OS where the page moves to the right when the panels are hovered on

--- a/js-css/tabitha.css
+++ b/js-css/tabitha.css
@@ -12,6 +12,9 @@ body {
    font-weight:500;
    margin: auto;
 }
+body::-webkit-scrollbar {
+   width:0px;
+}
 .wrapper {
    min-width:280px;
    max-width:640px;
